Tweak config mod-marccat FOLIO-903
Exclude raml-storage from schema processing.
That is done in data-import-raml-storage repo.

Not yet RMB.

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -458,8 +458,10 @@ mod-marccat:
     files:
       - marccat
     excludes:
+      - raml-storage
       - mod-marccat
     ramlutil: ramls/raml-storage/raml-util
+    rmb: false
 
 mod-rtac:
   - label: null
