Denote raml1 mod-password-validator FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -48,6 +48,7 @@ mod-permissions:
 
 mod-password-validator:
   - label: null
+    version1: true
     directory: ramls
     files:
       - password-validator
