Config apidocs mod-orders-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -297,6 +297,7 @@ mod-orders-storage:
       - physical
       - pieces
       - po_line
+      - po_number
       - purchase_order
       - reporting_code
       - source
