Config apidocs mod-orders-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -299,6 +299,7 @@ mod-orders-storage:
       - po_line
       - po_number
       - purchase_order
+      - receiving_history
       - reporting_code
       - source
       - vendor_detail
