Config apidocs mod-circulation-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -151,6 +151,7 @@ mod-circulation-storage:
       - request-storage
       - fixed-due-date-schedule
       - cancellation-reason
+      - patron-notice-policy
       - staff-slips
     ramlutil: ramls/raml-util
 
