Config apidocs mod-fees-fines FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -354,7 +354,7 @@ mod-feesfines:
       - payments
       - refunds
       - transfers
-      - transfertypes
+      - transfer-criteria
       - waiver
     ramlutil: ramls/raml-util
 
