Config apidocs mod-erm-usage-harvester FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -248,6 +248,14 @@ mod-erm-usage:
       - usagedataproviders
     ramlutil: ramls/raml-util
 
+mod-erm-usage-harvester:
+  - label: null
+    version1: true
+    directory: ramls
+    files:
+      - harvester
+    ramlutil: ramls/raml-util
+
 mod-gobi:
   - label: null
     version1: true
