--- a/_data/apigroup.yml
+++ b/_data/apigroup.yml
@@ -44,6 +44,7 @@ erm:
   modules:
     - mod-erm-usage
     - mod-erm-usage-harvester
+    - mod-licenses
 finance:
   title: Finance and orders
   description: Finance, orders, vendors.
