Config apidocs mod-circulation-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -149,6 +149,7 @@ mod-circulation-storage:
       - loan-policy-storage
       - loan-rules-storage
       - request-storage
+      - request-policy-storage
       - fixed-due-date-schedule
       - cancellation-reason
       - patron-notice-policy
