--- a/_data/api.yml
+++ b/_data/api.yml
@@ -255,6 +255,7 @@ mod-erm-usage-harvester:
     directory: ramls
     files:
       - harvester
+      - start
     ramlutil: ramls/raml-util
 
 mod-gobi:
