Config apidocs raml FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -575,6 +575,7 @@ raml:
     directory: ramls/codex
     files:
       - codex
+      - codex-packages
     ramlutil: .
     schemasDirectory: schemas/codex
     shared: ramls/codex
