Config apidocs mod-circulation-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -145,9 +145,9 @@ mod-circulation-storage:
     version1: true
     directory: ramls
     files:
+      - circulation-rules-storage
       - loan-storage
       - loan-policy-storage
-      - loan-rules-storage
       - request-storage
       - request-policy-storage
       - fixed-due-date-schedule
