Config apidocs mod-codex-ekb mod-codex-mux FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -95,6 +95,7 @@ mod-codex-ekb:
     directory: ramls/raml-util/ramls/codex
     files:
       - codex
+      - codex-packages
     ramlutil: null
     schemasDirectory: ramls/raml-util/schemas/codex
     shared: ramls/codex
@@ -117,6 +118,7 @@ mod-codex-mux:
     directory: ramls/raml-util/ramls/codex
     files:
       - codex
+      - codex-packages
     ramlutil: null
     schemasDirectory: ramls/raml-util/schemas/codex
     shared: ramls/codex
