Config apidocs mod-notify FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -398,6 +398,7 @@ mod-notify:
     directory: ramls
     files:
       - notify
+      - patron-notice
     ramlutil: ramls/raml-util
 
 mod-sender:
