Add tags for mod-kb-ebsco-java FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -237,6 +237,7 @@ mod-kb-ebsco-java:
       - providers
       - proxies
       - resources
+      - tags
       - titles
     ramlutil: ramls/raml-util
 
