--- a/_data/api.yml
+++ b/_data/api.yml
@@ -593,6 +593,7 @@ raml:
     directory: ramls/codex
     files:
       - codex
+      - codex-instances-sources
       - codex-packages
     ramlutil: .
     schemasDirectory: schemas/codex
