Config apidocs mod-invoice-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -216,7 +216,9 @@ mod-invoice-storage:
     directory: ramls
     files:
       - invoice
+      - invoice-line-number
     ramlutil: ramls/raml-util
+    schemasDirectory: ramls/acq-models/mod-invoice-storage/schemas
 
 mod-kb-ebsco:
   - label: null
