Config apidocs mod-invoice-storage FOLIO-903
Add invoice-number

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -217,6 +217,7 @@ mod-invoice-storage:
     files:
       - invoice
       - invoice-line-number
+      - invoice-number
     ramlutil: ramls/raml-util
     schemasDirectory: ramls/acq-models/mod-invoice-storage/schemas
 
