Config apidocs mod-notes FOLIO-903
Add link.raml

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -397,6 +397,7 @@ mod-notes:
     version1: true
     directory: ramls
     files:
+      - link
       - note
       - types
     ramlutil: ramls/raml-util
