Config apidocs mod-orders-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -339,6 +339,7 @@ mod-orders-storage:
     files:
       - alert
       - orders
+      - order-lines
       - pieces
       - po-line
       - po-line-number
