Config apidocs mod-invoice-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -218,6 +218,7 @@ mod-invoice-storage:
       - invoice
       - invoice-line-number
       - invoice-number
+      - voucher
     ramlutil: ramls/raml-util
     schemasDirectory: ramls/acq-models/mod-invoice-storage/schemas
 
