--- a/_data/api.yml
+++ b/_data/api.yml
@@ -287,8 +287,11 @@ mod-finc-config:
     directory: ramls
     files:
       - finc-tenant
-      - metadataSources
-      - metadataCollections
+      - fincConfigMetadataCollections
+      - fincConfigMetadataSources
+      - fincSelectMetadataCollections
+      - fincSelectMetadataSources
+      - isils
     ramlutil: ramls/raml-util
 
 mod-gobi:
