Config apidocs mod-circulation-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -152,6 +152,7 @@ mod-circulation-storage:
       - loan-policy-storage
       - request-storage
       - request-policy-storage
+      - scheduled-notice-storage
       - fixed-due-date-schedule
       - cancellation-reason
       - patron-notice-policy
