--- a/_data/api.yml
+++ b/_data/api.yml
@@ -77,6 +77,7 @@ mod-users-bl:
 mod-patron:
   - label: null
     directory: ramls
+    version1: true
     files:
       - patron
     ramlutil: ramls/raml-util
