Config apidocs mod-orders-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -348,6 +348,7 @@ mod-orders-storage:
       - alert
       - orders
       - order-lines
+      - order_invoice_relationship
       - pieces
       - po-line
       - po-line-number
