Config apidocs mod-inventory FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -166,6 +166,7 @@ mod-inventory:
     directory: ramls
     files:
       - inventory
+      - inventory-batch
     ramlutil: ramls/raml-util
     rmb: false
 
