Config apidocs mod-circulation FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -143,6 +143,7 @@ mod-circulation:
     directory: ramls
     files:
       - circulation
+      - requests-reports
     ramlutil: ramls/raml-util
     rmb: false
 
