Config apidocs mod-source-record-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -516,6 +516,7 @@ mod-source-record-storage:
     directory: ramls
     files:
       - source-record-storage
+      - source-record-storage-batch
     excludes:
       - raml-storage
     ramlutil: ramls/raml-storage/raml-util
