Config apidocs mod-inventory FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -171,6 +171,7 @@ mod-inventory:
     files:
       - inventory
       - inventory-batch
+      - inventory-config
     ramlutil: ramls/raml-util
     rmb: false
 
