Config apidocs mod-orders-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -351,6 +351,7 @@ mod-orders-storage:
     version1: true
     directory: ramls
     files:
+      - acquisitions-unit
       - alert
       - orders
       - order-lines
