Config apidocs mod-orders-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -354,6 +354,7 @@ mod-orders-storage:
     directory: ramls
     files:
       - acquisitions-unit
+      - acquisitions-unit-assignments
       - alert
       - orders
       - order-lines
