Config apidocs mod-inventory FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -181,6 +181,7 @@ mod-inventory:
       - inventory
       - inventory-batch
       - inventory-config
+      - isbn
     ramlutil: ramls/raml-util
     rmb: false
 
