Config apidocs mod-inventory-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -214,6 +214,7 @@ mod-inventory-storage:
       - locationunit
       - material-type
       - mode-of-issuance
+      - nature-of-content-term
       - service-point
       - service-points-user
       - shelf-location
