Config apidocs mod-invoice-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -236,6 +236,7 @@ mod-invoice-storage:
     version1: true
     directory: ramls
     files:
+      - acquisitions-unit-assignments
       - invoice
       - invoice-line-number
       - invoice-number
