Config apidocs mod-finc-config FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -310,6 +310,9 @@ mod-finc-config:
     directory: ramls
     files:
       - finc-tenant
+      - fincSelectFiles
+      - fincSelectFilters
+      - fincSelectFilterFiles
       - fincConfigMetadataCollections
       - fincConfigMetadataSources
       - fincSelectMetadataCollections
