--- a/_data/api.yml
+++ b/_data/api.yml
@@ -194,6 +194,7 @@ mod-inventory-storage:
       - holdings-type
       - holdings-note-type
       - instance-storage
+      - instance-storage-batch
       - instance-format
       - instance-type
       - instance-note-type
