Config apidocs mod-finance FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -331,6 +331,16 @@ mod-gobi:
       - acq-models
     ramlutil: ramls/raml-util
 
+mod-finance:
+  - label: null
+    version1: true
+    directory: ramls
+    files:
+      - finance
+    excludes:
+      - acq-models
+    ramlutil: ramls/raml-util
+
 mod-finance-storage:
   - label: null
     version1: true
