Config apidocs mod-circulation-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -169,6 +169,7 @@ mod-circulation-storage:
     version1: true
     directory: ramls
     files:
+      - anonymize-storage-loans
       - circulation-rules-storage
       - loan-storage
       - loan-policy-storage
