Config apidocs mod-inventory-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -209,6 +209,7 @@ mod-inventory-storage:
       - instance-note-type
       - instance-relationship-type
       - instance-status
+      - item-damaged-statuses
       - item-storage
       - item-note-type
       - alternative-title-type
