Config apidocs mod-custom-fields FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -597,6 +597,14 @@ edge-rtac:
     ramlutil: null
     rmb: false
 
+mod-custom-fields:
+  - label: null
+    version1: true
+    directory: ramls
+    files:
+      - custom-fields
+    ramlutil: ramls/raml-util
+
 mod-audit:
   - label: null
     version1: true
