--- a/_data/apigroup.yml
+++ b/_data/apigroup.yml
@@ -103,6 +103,7 @@ other:
   title: Other
   description: Not yet grouped.
   modules:
+    - mod-courses
 deprecated:
   title: Deprecated
   description: Some old ones that have been renamed.
