Config apidocs mod-email FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -477,6 +477,7 @@ mod-email:
     directory: ramls
     files:
       - email
+      - delayedTasks
     ramlutil: ramls/raml-util
 
 mod-event-config:
