Config apidocs mod-finance-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -354,10 +354,10 @@ mod-finance-storage:
     directory: ramls
     files:
       - budget
-      - encumbrance
       - fiscal_year
       - fund
       - fund_distribution
+      - group
       - ledger
       - transaction
     ramlutil: ramls/raml-util
