Config apidocs mod-erm-usage-harvester FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -311,6 +311,7 @@ mod-erm-usage-harvester:
     directory: ramls
     files:
       - harvester
+      - periodic
       - start
     ramlutil: ramls/raml-util
 
