Config apidocs mod-feesfines FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -437,6 +437,7 @@ mod-feesfines:
       - feefineactions
       - feefines
       - manualblocks
+      - overdue-fine-policy
       - owners
       - payments
       - refunds
