Config apidocs mod-finance-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -355,9 +355,10 @@ mod-finance-storage:
     directory: ramls
     files:
       - budget
-      - fiscal_year
+      - fiscal-year
       - fund
-      - fund_distribution
+      - fund-distribution
+      - fund-type
       - group
       - ledger
       - transaction
