Config apidocs mod-finance-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -355,6 +355,7 @@ mod-finance-storage:
     directory: ramls
     files:
       - budget
+      - finance-storage
       - fiscal-year
       - fund
       - fund-distribution
