Config apidocs mod-orders-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -394,6 +394,7 @@ mod-orders-storage:
       - orders
       - order-lines
       - order-invoice-relns
+      - order-templates
       - pieces
       - po-line
       - po-line-number
