Config apidocs mod-fees-fines FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -439,6 +439,7 @@ mod-feesfines:
       - comments
       - feefineactions
       - feefines
+      - lost-item-fee-policy
       - manualblocks
       - overdue-fine-policy
       - owners
