Config apidocs mod-finance FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -345,6 +345,7 @@ mod-finance:
     version1: true
     directory: ramls
     files:
+      - fund-types
       - funds
     ramlutil: ramls/raml-util
     schemasDirectory: ramls/acq-models/mod-finance/schemas
