Config apidocs mod-finance-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -363,6 +363,7 @@ mod-finance-storage:
       - fund-distribution
       - fund-type
       - group
+      - group_fund_fy
       - ledger
       - transaction
     ramlutil: ramls/raml-util
