--- a/_data/api.yml
+++ b/_data/api.yml
@@ -350,6 +350,7 @@ mod-finance:
       - budgets
       - fund-types
       - funds
+      - group-fund-fiscal-year
     ramlutil: ramls/raml-util
     schemasDirectory: ramls/acq-models/mod-finance/schemas
 
