--- a/_data/api.yml
+++ b/_data/api.yml
@@ -174,6 +174,7 @@ mod-circulation-storage:
       - circulation-rules-storage
       - loan-storage
       - loan-policy-storage
+      - request-preference-storage
       - request-storage
       - request-policy-storage
       - scheduled-notice-storage
