Config apidocs mod-source-record-manager FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -578,6 +578,7 @@ mod-source-record-manager:
     directory: ramls
     files:
       - change-manager
+      - mapping-rules-provider
       - metadata-provider
     excludes:
       - raml-storage
