Config apidocs mod-circulation FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -159,6 +159,7 @@ mod-circulation:
     directory: ramls
     files:
       - circulation
+      - end-patron-action-session
       - loan-anonymization
       - request-move
       - requests-reports
