Config apidocs mod-finance FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -354,8 +354,9 @@ mod-finance:
       - fiscal-years
       - fund-types
       - funds
-      - ledgers
       - group-fund-fiscal-year
+      - groups
+      - ledgers
     ramlutil: ramls/raml-util
     schemasDirectory: ramls/acq-models/mod-finance/schemas
 
