Specify Ruby CodeBuild runtime

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,8 @@ env:
 
 phases:
   install:
+    runtime-versions:
+      ruby: 2.6
     commands:
       - bundle install --path vendor/bundle
   #pre_build:
