Add command to update bundler

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,7 @@ phases:
     runtime-versions:
       ruby: 2.6
     commands:
+      - gem install bundler
       - bundle install --path vendor/bundle
   #pre_build:
     #commands:
