--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
   build:
     commands:
       - echo "******** Building Jekyll site ********"
-      - jekyll build
+      - bundle exec jekyll build
   post_build:
     commands:
       - echo "******** Uploading to S3 ********"
