Config apidocs mod-finance-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -377,6 +377,7 @@ mod-finance-storage:
       - group_fund_fy
       - ledger
       - transaction
+      - transaction-summary
     ramlutil: ramls/raml-util
     schemasDirectory: ramls/acq-models/mod-finance/schemas
 
