Config apidocs mod-inventory-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -208,6 +208,7 @@ mod-inventory-storage:
       - holdings-storage
       - holdings-type
       - holdings-note-type
+      - hrid-settings-storage
       - instance-storage
       - instance-storage-batch
       - instance-format
