Config apidocs mod-finance FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -363,6 +363,7 @@ mod-finance:
       - groups
       - ledgers
       - transaction
+      - transaction-summary
     ramlutil: ramls/raml-util
     schemasDirectory: ramls/acq-models/mod-finance/schemas
 
