Config apidocs mod-finance FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -359,6 +359,7 @@ mod-finance:
       - fiscal-years
       - fund-types
       - funds
+      - group-fiscal-year-summaries
       - group-fund-fiscal-year
       - groups
       - ledgers
