Config apidocs mod-circulation FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -162,6 +162,7 @@ mod-circulation:
       - end-patron-action-session
       - inventory-reports
       - loan-anonymization
+      - pick-slips
       - request-move
       - requests-reports
     ramlutil: ramls/raml-util
