--- a/_data/api.yml
+++ b/_data/api.yml
@@ -356,6 +356,7 @@ mod-finance:
     version1: true
     directory: ramls
     files:
+      - awaiting-payment
       - budgets
       - fiscal-years
       - fund-types
