Config apidocs mod-kb-ebsco-java FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -280,6 +280,7 @@ mod-kb-ebsco-java:
     version1: true
     directory: ramls
     files:
+      - custom-labels
       - eholdings
       - packages
       - providers
