--- a/_data/api.yml
+++ b/_data/api.yml
@@ -406,6 +406,7 @@ mod-orders:
     files:
       - acquisitions-units
       - order
+      - titles
     ramlutil: ramls/raml-util
     schemasDirectory: ramls/acq-models/mod-orders-storage/schemas
 
@@ -427,6 +428,7 @@ mod-orders-storage:
       - purchase-order
       - receiving-history
       - reporting-code
+      - titles
     ramlutil: ramls/raml-util
     schemasDirectory: ramls/acq-models/mod-orders-storage/schemas
 
