--- a/_data/api.yml
+++ b/_data/api.yml
@@ -579,6 +579,7 @@ mod-source-record-storage:
     files:
       - source-record-storage
       - source-record-storage-batch
+      - source-record-storage-handlers
     excludes:
       - raml-storage
     ramlutil: ramls/raml-storage/raml-util
