Config apidocs mod-finance FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -359,6 +359,7 @@ mod-finance:
       - group-fund-fiscal-year
       - groups
       - ledgers
+      - release-encumbrance
       - transaction
       - transaction-summary
     ramlutil: ramls/raml-util
