Config apidocs mod-kb-ebsco-java FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -273,6 +273,7 @@ mod-kb-ebsco-java:
     version1: true
     directory: ramls
     files:
+      - access-types
       - custom-labels
       - eholdings
       - packages
