Config apidocs mod-circulation FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -160,6 +160,7 @@ mod-circulation:
     files:
       - circulation
       - circulation-rules
+      - claim-item-returned
       - declare-item-lost
       - end-patron-action-session
       - inventory-reports
