Config apidocs mod-invoice-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -261,6 +261,7 @@ mod-invoice-storage:
     version1: true
     directory: ramls
     files:
+      - batch-group
       - invoice
       - invoice-line-number
       - invoice-number
