Config apidocs mod-users FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -79,6 +79,7 @@ mod-users:
       - groups
       - users
       - addressTypes
+      - patron-block-conditions
       - proxiesFor
     ramlutil: ramls/raml-util
 
