Config apidocs mod-invoice FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -253,6 +253,7 @@ mod-invoice:
     version1: true
     directory: ramls
     files:
+      - batch-group
       - invoice
       - voucher
     ramlutil: ramls/raml-util
