Config apidocs mod-circulation-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -178,6 +178,7 @@ mod-circulation-storage:
     directory: ramls
     files:
       - anonymize-storage-loans
+      - check-in-storage
       - circulation-rules-storage
       - loan-storage
       - loan-policy-storage
