Config apidocs mod-users FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -80,6 +80,7 @@ mod-users:
       - users
       - addressTypes
       - patron-block-conditions
+      - patron-block-limits
       - proxiesFor
     ramlutil: ramls/raml-util
 
