Config apidocs mod-orders-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -412,6 +412,7 @@ mod-orders-storage:
     files:
       - acquisitions-unit
       - alert
+      - configuration
       - orders
       - order-lines
       - order-invoice-relns
