Config apidocs mod-orders FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -402,6 +402,7 @@ mod-orders:
     directory: ramls
     files:
       - acquisitions-units
+      - configuration
       - order
       - titles
     ramlutil: ramls/raml-util
