Config apidocs mod-invoice FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -249,6 +249,7 @@ mod-invoice:
     directory: ramls
     files:
       - batch-group
+      - batch-voucher
       - batch-voucher-export-configuration
       - invoice
       - voucher
