--- a/_data/api.yml
+++ b/_data/api.yml
@@ -263,6 +263,7 @@ mod-invoice-storage:
       - batch-group
       - batch-voucher
       - batch-voucher-export-configuration
+      - batch-voucher-exports
       - invoice
       - invoice-line-number
       - invoice-number
