--- a/_data/api.yml
+++ b/_data/api.yml
@@ -209,6 +209,7 @@ mod-inventory-storage:
       - holdings-type
       - holdings-note-type
       - hrid-settings-storage
+      - instance-bulk
       - instance-preceding-succeeding-titles
       - instance-storage
       - instance-storage-batch
