--- a/_data/api.yml
+++ b/_data/api.yml
@@ -32,6 +32,7 @@ mod-login:
 
 mod-login-saml:
   - label: null
+    version1: true
     directory: ramls
     files:
       - saml-login
@@ -549,6 +550,7 @@ mod-tags:
 
 mod-user-import:
   - label: null
+    version1: true
     directory: ramls
     files:
       - import
